--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="...mp4" autoplay controls loop></video>
+            <video src="2-side.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Time</h1>
@@ -37,6 +37,11 @@
                 Keren banget ya orang-orangg. Tapii aku ngga mau ngejar M.Kom 
                 deh kayaknya, udah pusing, apalagi kalo M.Kom unimal, atau 
                 Banda Aceh, ngga dulu.
+            </p>
+            <p>
+                Terasa seperti menggunakan kamera jahat tahun 2016, wkwkwk. Ohh 
+                iya terkejut dikit, ternyata 2016 itu udah 8 tahun yang lalu yah, 
+                kirain baru tahun kemaren soalnya.
             </p>
         </div>
     </div>
