--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -43,6 +43,38 @@
                 iya terkejut dikit, ternyata 2016 itu udah 8 tahun yang lalu yah, 
                 kirain baru tahun kemaren soalnya.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku, lagi mau lanjut ngerjain skripsi part 2, webnya udah oke, 
+                paling nanti ubah tampilan dikit biar beda sama punya kak Jul, 
+                wkwkwk, ganti warna beres kayaknya.
+            </p>
+            <p>
+                Tapi, aku jadi kepikiran ini dari tadi. Bukan dari tadi sih, dari 
+                kemaren-kemaren. Jadi kan aku jual webku kemaren, nah pas pembayarannya 
+                itu temenku emang bayar untuk web, dan pas TF pun catatannya gitu.
+                Dan itu boleh. Cuman kan kalo skripsi agak lain ya, karena kan 
+                skripsi tuh kalo dikerjain sama orang lain dan yang presentasi 
+                nanti si pemiliknya, kan jadinya kayak penipuan.
+            </p>
+            <p>
+                Gini deh, kalo web kan aku jual web dengan akad penjualan web, nah 
+                dia mau pake untuk skripsi atau apa itu urusan dia. Tapi kalo 
+                skripsi kan aneh ya, bisa ngga ya aku buat akadnya jual skripsi 
+                biar aku aman dan ngga dosa.
+            </p>
+            <p>
+                Aku udah pikirin ini sih sebelumnya, aku ngga boleh terlalu berkutat 
+                dengan ngerjain punya orang begini. Bukannya apa ya, takut nambah-nambah 
+                dosa euy. Kalo sekedar copas-copas tugas orang sih aku sering, cuman 
+                kan ini menghasilkan penghasilan, takutnya ntar hatiku makin keras 
+                dan banyak dosa, yekan.
+            </p>
+            <p>
+                Beres ini, aku ngerjain hal lain aja deh. Ngga mau lagi akuu.
+            </p>
         </div>
     </div>
 </body>
