--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -75,6 +75,35 @@
             <p>
                 Beres ini, aku ngerjain hal lain aja deh. Ngga mau lagi akuu.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, kenapa orang-orang ngga buat aplikasi yang kayak spotify tapi 
+                isinya suara Qori-qori sama nasheed ya. Kayak non musik gituu, ntar 
+                kita bisa milih mau dengerin Qori siapa aja. Dan isinya full Quran 
+                dan shalawat-shalawat/zikir nasheed gituu. Kan ngga ada ya base 
+                khusus untuk para Qori, kalo dari youtube sama dari spotify sih 
+                ngga oke karena platform mereka ke musik arahnya.
+            </p>
+            <p>
+                Apa udah ada ya di playstore? Tapi ngga deh kayaknya. Pengen ngga 
+                sih, ada app nya gituu, wkwkwk. Kayak Muzammil, Abdul Rahman Mosad, 
+                terus Ahmad Saud yang suaranya anak-anak, terus yang ini juga enak 
+                ni Zain Abu Kautsar juz 29, suara mereka dikumpulin terus dijadiin 
+                aplikasi android. Terus jadi life stylenya orang muslim dengerin 
+                Quran. Sebenernya ada sih sound gitu, di aplikasi quran hpku, cuman 
+                harus download per surah/perjuznya, kan ngga woth it.
+            </p>
+            <p>
+                Nanti aku reset lagi deh. Tapi ya, kalo berhasil bikin app begitu, 
+                ngga kebayang seberapa banyak pahala yang ngalir ke si pembuatnya. 
+                Tiap ada yang dengerin + dapat pahala, pembuatnya juga dapat.
+            </p>
+            <p>
+                Ahh, kenapa jadi kepanjangan sih, aku mau baca contoh-contoh skripsi 
+                dulu deh ya.
+            </p>
         </div>
     </div>
 </body>
