--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -96,7 +96,7 @@
                 harus download per surah/perjuznya, kan ngga woth it.
             </p>
             <p>
-                Nanti aku reset lagi deh. Tapi ya, kalo berhasil bikin app begitu, 
+                Nanti aku riset lagi deh. Tapi ya, kalo berhasil bikin app begitu, 
                 ngga kebayang seberapa banyak pahala yang ngalir ke si pembuatnya. 
                 Tiap ada yang dengerin + dapat pahala, pembuatnya juga dapat.
             </p>
