--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -104,6 +104,12 @@
                 Ahh, kenapa jadi kepanjangan sih, aku mau baca contoh-contoh skripsi 
                 dulu deh ya.
             </p>
+            <p>
+                Adaaa loh wkwkwk. Tapi kebanyakan harus offline dan pilihan Qori nya 
+                ngga banyak. Ada yang langsung ngarahin link ke youtube juga, tapii 
+                aku maunya kayak spotify, wkwkwk. Ahh nanti-nanti deh aku pikirin 
+                lagi.
+            </p>
         </div>
     </div>
 </body>
