--- a/html/083. Time (04-08-2024)/time.html
+++ b/html/083. Time (04-08-2024)/time.html
@@ -110,6 +110,16 @@
                 aku maunya kayak spotify, wkwkwk. Ahh nanti-nanti deh aku pikirin 
                 lagi.
             </p>
+            <p>
+                Akuu, aku kan menjelajahi web RAMA unimal buat ngeliat contoh-contoh 
+                skripsi kaan, karna aku juga udah ngga bisa ke kampus, teruss aku 
+                nemu skripsinya bang Lam yang kahim IT, daan itu isinya klasifikasi 
+                pake CNN, tapii di aku liat detail skripsinya cuman notebook lohh
+                dan tanpa ada web. Hah, kok bisa gitu? Whatt? Aku yang setengah 
+                gila memikirkan web pake python ini dianggap apa woii, tau gitu 
+                aku ambil notebooknya doang, dan udah dari tahun lalu aku S.Kom. 
+                Hadeh.
+            </p>
         </div>
     </div>
 </body>
