--- a/html/084. Long Time (05-08-2024)/lt.html
+++ b/html/084. Long Time (05-08-2024)/lt.html
@@ -41,6 +41,14 @@
                 Jadi ya begitu, ini udah terlalu jauh dari zona ku. Aku akan kembali 
                 lagi ke zona awal. Dalam tigaa.. duaa.. satuu... Wkwkwk, becandaa. 
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hahaha, tapi ini bukan akuu. Aku kalo mau stop ngga pake pamit, langsung 
+                ilang aja gitu, wkwkwk. Karena kalo bilang gini kan jatohnya jadi lucu.
+                Dahlah, btw ini quotesnya baguss, nemu di capcut, sekalian aku save deh.
+            </p>
         </div>
     </div>
 </body>
