--- a/html/084. Long Time (05-08-2024)/lt.html
+++ b/html/084. Long Time (05-08-2024)/lt.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="...mp4" autoplay controls loop></video>
+            <video src="lt.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>It's been a long time</h1>
