--- a/html/084. Long Time (05-08-2024)/lt.html
+++ b/html/084. Long Time (05-08-2024)/lt.html
@@ -49,6 +49,20 @@
                 ilang aja gitu, wkwkwk. Karena kalo bilang gini kan jatohnya jadi lucu.
                 Dahlah, btw ini quotesnya baguss, nemu di capcut, sekalian aku save deh.
             </p>
+            <p>
+                Ternyata SKL udah siap, wkwkwk. Berarti emang urutannya beda kayak yang 
+                Kak Kh*iri bilang, okelah. Tapi masih harus nunggu dekan teknik TTD-in 
+                dan kata Ind*h disuruh ke adm fakultas besok bawa kertas distribusi 
+                skripsi. Tapi jam 4. Aku dulu pernah nunggu-nunggu ijazah kakakku 
+                di legalisir di fakultas itu, katanya jam 4, tapi sampe jam 5 belum 
+                siap dan diminta balik lagi besoknya.
+            </p>
+            <p>
+                Hmm, kayaknya aku nyari aman aja deh, ke kampusnya hari Rabu atau 
+                Kamisnya aja. Kalo besok kan nanggung banget jam 4, jauh juga dari 
+                sini kalo disuruh bolak-balik. Dan aku kan juga harus minta ttd pak 
+                Sai* dulu di akademik reuleut.
+            </p>
         </div>
     </div>
 </body>
